# shaders

./: README.md  fragment.glsl  index.html  sketch.js  vertex.glsl  vertex.vert
leptos-shaders/: Cargo.toml  index.html  webgl.js
leptos-shaders/src/: main.rs  webgl.rs
leptos-wgpu/: Cargo.toml  index.html
leptos-wgpu/src/: app.rs  lib.rs  main.rs  webgl.rs  wgpu.rs
leptos-wgpu/src/webgpu/: app.rs  context.rs  instance.rs  mod.rs  state.rs
