[package]
name = "leptos-shaders"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.14.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]}
wasm-bindgen = "0.2.93"
