[package]
name = "leptos_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
name = "leptos_wgpu"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"

# include these deps if the target is wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
